[gd_scene load_steps=8 format=3 uid="uid://cmpem1a1hrxi5"]

[ext_resource type="Theme" uid="uid://dput70sdrayl" path="res://assets/godot/tres/uiGlobalTheme.tres" id="1_g4gt0"]
[ext_resource type="FontFile" uid="uid://b3f6o2t3fsb05" path="res://assets/external/font/RobotoCondensed-Light.ttf" id="2_4oeos"]
[ext_resource type="Script" path="res://assets/godot/scn/baseGame/gameMainMenu/userInterface/mainMenu/settings/uiMenuSettings.gd" id="3_ikduh"]
[ext_resource type="AudioStream" uid="uid://u57hkwqqf64b" path="res://assets/external/aud/fx/select_007.ogg" id="4_j1w6f"]

[sub_resource type="Animation" id="Animation_f2c4x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157)]
}

[sub_resource type="Animation" id="Animation_twdhm"]
resource_name = "uiMenuSettingsHovered"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bkib"]
_data = {
"RESET": SubResource("Animation_f2c4x"),
"uiMenuSettingsHovered": SubResource("Animation_twdhm")
}

[node name="uiMenuSettings" type="Button"]
offset_right = 73.0
offset_bottom = 32.0
theme = ExtResource("1_g4gt0")
theme_override_colors/font_color = Color(1, 1, 1, 0.392157)
theme_override_fonts/font = ExtResource("2_4oeos")
theme_override_font_sizes/font_size = 15
text = "Settings"
flat = true
script = ExtResource("3_ikduh")

[node name="uiMenuSettingsAnimation" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_5bkib")
}
autoplay = "uiMenuStartHighlight"

[node name="uiMenuSettingsSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_j1w6f")
bus = &"SFX Main"

[connection signal="mouse_entered" from="." to="." method="_whenMouseEnteredButton"]
[connection signal="mouse_exited" from="." to="." method="_whenMouseExitedButton"]
[connection signal="pressed" from="." to="." method="_whenMousePressed"]
